<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/titleInput"
        android:hint="@string/titolo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/notesInput"
        android:hint="@string/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:id="@+id/rgTripType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbDayTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_trip" />

        <RadioButton
            android:id="@+id/rbLocalTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local_trip" />

        <RadioButton
            android:id="@+id/rbMultiDayTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multi_day_trip" />
    </RadioGroup>

</LinearLayout>
