<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.travelcompanion.MainActivity">
    <item
        android:id="@+id/MapFragment"
        android:icon="@drawable/ic_home_foreground"
        android:title="@string/view_map" />
    <item
        android:id="@+id/CreateTripFragment"
        android:orderInCategory="100"
        android:title="@string/create_trips"
        app:showAsAction="never" />

    <item
        android:id="@+id/nav_view_trips_graph"
        android:title="@string/visualize_travel" />


    <item
        android:id="@+id/StatisticsFragment"
        android:orderInCategory="100"
        android:title="@string/visualize_statistics"
        app:showAsAction="never" />

    <item
        android:id="@+id/GeofenceFragment"
        android:title="Punti d'interesse"/>
</menu>